--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,14 @@ a.selected {
     background-color: #326732;
 }
 
+a:active {
+    font-size: 1.1em;
+}
+
+p+h2 {
+    text-align: center;
+}
+
 article {
     background-color: #FFF;
     border-bottom: 4px solid #326732;
@@ -69,7 +77,7 @@ article p {
 }
 
 aside {
-    background-color: #FFF;
+    background-color: #FFC72B;
     margin-top: 19px;
     padding: 1em;
 }
@@ -102,6 +110,7 @@ footer p {
 h1 {
     font-size: 1.5em;
     font-family: Notable, serif;
+    text-transform: uppercase;
 }
 
 h2 {
@@ -203,9 +212,18 @@ p {
     word-spacing: 2px;
 }
 
+p::first-letter {
+    font-size: 1.1em;
+    font-weight: bolder;
+}
+
 td, th {
     border: 1px solid #ddd;
     padding: 8px;
+}
+
+td:nth-child(1) {
+    background-color: #FF0;
 }
 
 th {
@@ -221,17 +239,17 @@ tr:hover {
 }
 
 tr:nth-child(even) {
-    background-color: #C6FBC7;
+    background-color: #CFF;
 }
 
 tr:nth-child(odd) {
-    background-color: #77e793;
+    background-color: #FFF;
 }
 
 video {
     display: block;
     width: 100%;
-    border-style: solid;
+    border-style: double;
     border-width: 0 0 10px;
     border-color: #326732;
     margin: auto;
